--- a/style.css
+++ b/style.css
@@ -102,6 +102,9 @@ h1{
         transform: scale(0.3);
         left: -80px;
     top: 80px;}
+    .hok:hover{
+        transform: scale(1.1);
+    }
     .lotka{
         display: none;
     }
