--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ h1{
         width: 180px;
     }
     .hok{
-        /*display: none;*/
+        display: none;
         position: absolute;
         transform: scale(0.3);
         left: -80px;
